src/widgets/user-management-table-widget/ui/users-management/UsersManagementTable.module.scss
.userManagementTable {
  padding-top: 20px;
  display: flex;
  flex-direction: column;
  max-width: 100%;
  width: 100%;
  height: 100%;
  gap: 30px;
}

.controlsSection {
  padding: 0 23px;
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.usersTableSection {
  margin: 0 23px;
  max-width: 100%;
  max-height: 100%;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  overflow: hidden;
  border: 1px solid var(--bg-stroke-gray);
}
.usersTableSection.hasScroll {
  overflow: auto;
  margin-right: 0;
}
.usersTableSection::-webkit-scrollbar {
  width: 26px;
  height: 26px;
}
.usersTableSection::-webkit-scrollbar-track {
  background: transparent;
}
.usersTableSection::-webkit-scrollbar-track:vertical {
  border-left: 1px solid var(--bg-stroke-gray);
  border-bottom: 1px solid var(--bg-stroke-gray);
}
.usersTableSection::-webkit-scrollbar-track:horizontal {
  border-top: 1px solid var(--bg-stroke-gray);
}
.usersTableSection::-webkit-scrollbar-thumb {
  background-color: var(--bg-stroke-gray);
  border-radius: 32px;
  border: 8px solid transparent;
  background-clip: padding-box;
}
.usersTableSection::-webkit-scrollbar-thumb:vertical {
  background-color: var(--bg-stroke-gray);
  border-radius: 32px;
  border: 8px solid transparent;
  background-clip: padding-box;
}

